No auto granting of Badges (via prereq only)

--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -30,14 +30,12 @@
         <p>{{badge.short_description}}</p>
         <p>XP: {{badge.xp}}</p>
         <!-- <p>Series: {{badge.series}}</p> -->
-        <p>Requirements:
+        <p>Requirements:<ul><small>
         {% for p in badge.prereqs %}
-          {% if forloop.first %}<ul><small>{% endif %}
           <li>{{ p }}</li>
-          {% if forloop.last %}</ul></small>{% endif %}
         {% empty %}
-          None
-        {% endfor %}</p>
+          <li>None (granted manually)</li>
+        {% endfor %}</ul></small></p>
         {% if request.user.is_staff %}
         <div class="btn-group block" role="group">
           <a class="btn btn-warning " href="{% url 'badges:badge_update' badge.id %}" role="button">
