--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -11,11 +11,14 @@
           </div>
           <div class="media-body">
             {% if request.user.is_staff %}
+            <div class="pull-right">
               {% if comment.flagged %}
-              <a class='btn btn-success btn-xs pull-right' href="{% url 'comments:unflag' comment.id %}"><i class="fa fa-flag"></i></a>
+              <a class='btn btn-success btn-xs' href="{% url 'comments:unflag' comment.id %}"><i class="fa fa-fw fa-flag"></i></a>
               {% else %}
-              <a class='btn btn-danger btn-xs pull-right' href="{% url 'comments:flag' comment.id %}"><i class="fa fa-flag"></i></a>
+              <a class='btn btn-warning btn-xs' href="{% url 'comments:flag' comment.id %}"><i class="fa fa-fw fa-flag"></i></a>
               {% endif %}
+              <a class='btn btn-danger btn-xs' href="{% url 'comments:delete' comment.id %}"><i class="fa fa-fw fa-trash-o"></i></a>
+            </div>
             {% endif %}
             <h5 class="media-heading">  <a href="{% url 'profiles:profile_detail' comment.user.profile.id %}">{{comment.user}}</a>
               {% if request.user.is_staff %}
