--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -28,6 +28,11 @@
               {% if comment.flagged %} FLAGGED (students can't see this comment) {% endif %}
             </h5>
               {{comment.text|safe}}
+              <ul>
+              {% for document in comment.document_set.all %}
+                <li><a href="{{ document.docfile.url }}">{{ document.docfile|filename }}</a></li>
+              {% endfor %}
+              </ul>
           </div>
         </div>
       </li>
