rounded images everywhere!

--- a/src/badges/templates/badges/detail.html
+++ b/src/badges/templates/badges/detail.html
@@ -7,7 +7,7 @@
 
   <div class="media">
     <div class="media-left">
-      <img class="media-object icon-lg" src="{{ badge.icon.url|default_if_none:'#' }}" alt="icon" />
+      <img class="media-object icon-lg img-rounded" src="{{ badge.icon.url|default_if_none:'#' }}" alt="icon" />
     </div>
     <div class="media-body">
       {{ badge.short_description }}
