--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -30,7 +30,7 @@
         <div class="row">
           <h4 class="panel-title">
             <div class="col-xs-1 col-icon">
-              <img class="img-responsive panel-title-img" src="{{ s.quest.get_icon_url }}" alt="icon"/>
+              <img class="img-responsive panel-title-img img-rounded" src="{{ s.quest.get_icon_url }}" alt="icon"/>
             </div>
             <div class="col-xs-5">{{s.quest.name}}</div>
             <div class="col-xs-1">{{s.quest.xp}}  </div>
