--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -54,7 +54,7 @@
         {% endif %}
         '>
         <div class="thumbnail thumbnail-badge">
-          <img class="hackerbadge
+          <img class="hackerbadge img-rounded
             {% if not badge in earned_badges %} hackerbadge-unearned {% endif %}"
             src="{{badge.get_icon_url}}" alt="badge icon">
           <div class="caption caption-badge text-center">
