--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -188,7 +188,7 @@
             data-trigger="hover focus" data-placement="left" data-html="true"
             title="<h3 class='panel-title'>{{assertion.badge.name}}</h3>"
             data-content='
-            <img class="icon-xl center-block" src="{{assertion.badge.get_icon_url}}">
+            <img class="icon-xl center-block img-rounded" src="{{assertion.badge.get_icon_url}}">
             <p>{{assertion.badge.short_description}}</p>
             <p>XP:
             {% if assertion.game_lab_transfer %}
@@ -209,7 +209,7 @@
             </a>
             {% endif %}
             '>
-                <img class="icon-lg
+                <img class="icon-lg img-rounded
                   {% if assertion.game_lab_transfer %} hackerbadge-transfer {% endif %}"
                   src="{{assertion.badge.get_icon_url}}">
             </a>
