--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -41,7 +41,7 @@
     </div>
     <ul class="list-group">
       {% with submission.get_comments as target_comments %}
-        {% include "quest_manager/comments.html" %}
+        {% include "comments/comments.html" %}
       {% endwith %}
     </ul>
   </div>
