--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -76,7 +76,7 @@
           </li>
           <li class="list-group-item list-group-item-info">Submission Comments</li>
           {% with s.get_comments as target_comments %}
-            {% include "quest_manager/comments.html" %}
+            {% include "comments/comments.html" %}
           {% endwith %}
 
         </ul>
