--- a/src/comments/templates/comments/comments.html
+++ b/src/comments/templates/comments/comments.html
@@ -13,11 +13,16 @@
             {% if request.user.is_staff %}
             <div class="pull-right">
               {% if comment.flagged %}
-              <a class='btn btn-success btn-xs' href="{% url 'comments:unflag' comment.id %}"><i class="fa fa-fw fa-flag"></i></a>
+              <a class='btn btn-success btn-xs' title='Unflag this comment'
+                href="{% url 'comments:unflag' comment.id %}"><i class="fa fa-fw fa-flag"></i></a>
               {% else %}
-              <a class='btn btn-warning btn-xs' href="{% url 'comments:flag' comment.id %}"><i class="fa fa-fw fa-flag"></i></a>
+              <a class='btn btn-warning btn-xs' title='Flag this comment'
+                href="{% url 'comments:flag' comment.id %}"><i class="fa fa-fw fa-flag"></i></a>
               {% endif %}
-              <a class='btn btn-danger btn-xs' href="{% url 'comments:delete' comment.id %}"><i class="fa fa-fw fa-trash-o"></i></a>
+              <a class='btn btn-danger btn-xs' title='Delete this comment'
+                href="{% url 'comments:delete' comment.id %}"><i class="fa fa-fw fa-trash-o"></i></a>
+              <a class='btn btn-danger btn-xs' title='Ban this user from public comments'
+                href="{% url 'profiles:comment_ban' comment.user.id %}"><i class="fa fa-fw fa-ban"></i></a>
             </div>
             {% endif %}
             <h5 class="media-heading">  <a href="{% url 'profiles:profile_detail' comment.user.profile.id %}">{{comment.user}}</a>
