--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -67,7 +67,8 @@
             <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
           </form>
           {% else %}
-            <p>Sorry Spammy McTrollson, you've been banned from commenting on announcements.  If you would like this privilege back, you can grovel for forgiveness from Mr C.</p>
+            <p><i class="fa fa-ban text-danger"> </i>
+              Sorry Spammy McTrollson, you've been banned from commenting on announcements.  If you would like this privilege back, you can grovel for forgiveness from Mr C.</p>
           {% endif %}
         </li>
       </ul>
