bootstrap badges (# label) on duplicate badges

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -141,17 +141,6 @@
          {% endif %}
         </div>
 
-         <!-- <li class="list-group-item list-group-item-info">Completed</li>
-         {% if completed_submissions %}
-             {% for s in completed_submissions %}
-               <li class="list-group-item list-group-item-packed">
-                {{s.quest}} <small>({{s.quest.xp}} XP)</small>
-               </li>
-             {% endfor %}
-         {% else %}
-           <li class="list-group-item">None.</li>
-         {% endif %}
-       </ul> -->
       </div> <!--panel -->
 
       <div class="panel panel-primary">
@@ -209,9 +198,12 @@
             </a>
             {% endif %}
             '>
+              <div class="icon-badge-container">
                 <img class="icon-lg img-rounded
                   {% if assertion.game_lab_transfer %} hackerbadge-transfer {% endif %}"
                   src="{{assertion.badge.get_icon_url}}">
+                <span class="badge badge-icon-lg progress-bar-info">{{assertion.count_bootstrap_badge}}</span>
+              </div>
             </a>
           {% empty %}
             None.
