--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -2,14 +2,72 @@
 {% load crispy_forms_tags %}
 {% block heading_inner %}Suggestions{% endblock %}
 {% block content %}
-<ul>
-    {% for suggestion in object_list %}
-    <li>{{ suggestion.title }}  :
-    <a href="{% url "suggestions:edit" suggestion.id %}">edit</a>
-    <a href="{% url "suggestions:delete" suggestion.id %}">delete</a>
-    </li>
-    {% endfor %}
-</ul>
+<p>Want to help improve the Hackerspace? Look through the list of suggestions
+below and vote on those you like and dislike!  Every student can vote once per day.</p>
+<p>Have your own idea that isn't already suggested below? <a href="{% url 'suggestions:create' %}">Make a new suggestion</a>.</p>
+<div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
+{% for object in object_list %}
+  <div class="panel accordian
+    {% if object.id == active_id %} active {% endif %}
+    {% if object.status == 1 %}panel-info
+    {% else %}panel-default
+    {% endif %}">
+    <div
+      class="panel-heading accordian accordian-trigger
+      {% if object.id == active_id %} active {% endif %}"
+      role="tab" id="heading{{object.id}}"
+      aria-expanded="{% if object.id == active_id %}true{% else %}false{% endif %}"
+      aria-controls="collapse{{object.id}}"
+      data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
+      <h4 class="panel-title">
+        <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{object.id}}" aria-expanded="true" aria-controls="collapse{{object.id}}"> -->
+          {% if object.sticky %}<i class="fa fa-exclamation-circle">&nbsp;</i>{% endif %}
+          {{object.title}}
+        <!-- </a> -->
+        <small class="pull-right">{{object.timestamp.date|date:'D, N j, Y'}}</small>
+      </h4>
+    </div>
+    <div id="collapse{{object.id}}"
+      class="panel-collapse collapse {% if object.id == active_id %} in {% endif %}"
+      role="tabpanel" aria-labelledby="heading{{object.id}}">
+      <ul class="list-group">
+        <li class="list-group-item">
+          {% if request.user.is_staff %}
+          <div class="pull-right">
+            <a class="btn btn-danger" href="{% url 'suggestions:delete' object.id %}" role="button">Delete</a>
+            <a class="btn btn-warning" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
+            <a class="btn btn-primary" href="" role="button">Copy</a>
+          </div>
+          {% endif %}
+          <!-- <i class="fa fa-quote-left fa-2x pull-left"></i> -->
+          <div>
+            {{object.description}}
+          </div>
+        </li>
 
-<a href="{% url 'suggestions:create' %}">Make a new suggestions</a>
+        {% with object.get_comments as target_comments %}
+          {% if target_comments %}
+            <li class="list-group-item list-group-item-info">Suggestion Comments</li>
+            {% include "comments/comments.html" %}
+          {% endif %}
+        {% endwith %}
+
+        <li class="list-group-item list-group-item-info">Comment </li>
+        <li class="list-group-item">
+          {% if not request.user.profile.banned_from_comments %}
+          <form method="POST" action="{% url 'announcements:comment' object.id %}">{% csrf_token %}
+            {{ comment_form | crispy }}
+            <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
+          </form>
+          {% else %}
+            <p><i class="fa fa-ban text-danger"> </i>
+              Sorry Spammy McTrollson, you've been banned from commenting on announcements.  If you would like this privilege back, you can grovel for forgiveness from Mr C.</p>
+          {% endif %}
+        </li>
+      </ul>
+
+    </div>
+  </div>
+{% endfor %}
+</div>
 {% endblock %}
