--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -110,8 +110,10 @@
             <i class="fa fa-bars"></i>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="https://docs.google.com/drawings/d/1IN1nFr00VI2BWaRvraiiRGgnYoKPs4ywt2rWevwHgXI/edit?usp=sharing">Quest Map</a></li>
-            <li><a href="{% url 'courses:ranks' %}">Ranks List</a></li>
+            <li><a href="{% url 'suggestions:list' %}"><i class="fa fa-fw fa-lightbulb-o"></i> Suggestion Box</a></li>
+            <li><a href="https://docs.google.com/drawings/d/1IN1nFr00VI2BWaRvraiiRGgnYoKPs4ywt2rWevwHgXI/edit?usp=sharing">
+                <i class="fa fa-fw fa-map-o"></i> Quest Map</a></li>
+            <li><a href="{% url 'courses:ranks' %}"><i class="fa fa-fw fa-star-o"></i> Ranks List</a></li>
             <!-- <li><a href="#">#</a></li> -->
             <!-- <li role="separator" class="divider"></li>
             <li class="dropdown-header">Debug</li> -->
