--- a/src/comments/templates/comments/confirm_delete.html
+++ b/src/comments/templates/comments/confirm_delete.html
@@ -7,7 +7,7 @@
 <form action="" method="post">{% csrf_token %}
   <p>Are you sure you want to delete this Comment?<p>
   <div class="well">
-    <p>Commenter: {{object.user})</p>
+    <p>Commenter: {{object.user}}</p>
     <p>Date Posted: {{object.timestamp}}</p>
     <p>Comment: {{object.text|safe}}</p>
   </div>
