--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -27,6 +27,7 @@ below and vote on those you like and dislike!  Every student can vote once per d
       data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
       <h4 class="panel-title">
         <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{object.id}}" aria-expanded="true" aria-controls="collapse{{object.id}}"> -->
+          {{ object.get_score }}
           {% if object.sticky %}<i class="fa fa-exclamation-circle">&nbsp;</i>{% endif %}
           {{object.title}}
         <!-- </a> -->
