"please read the submission instructions..." btn

--- a/src/quest_manager/templates/quest_manager/quest_approval.html
+++ b/src/quest_manager/templates/quest_manager/quest_approval.html
@@ -28,3 +28,15 @@
 </div>
 
 {% endblock %}
+
+{% block js %}
+<script>
+$( document ).ready(function() {
+    $('[id^=btn_quick_text]').on('click', function () {
+        var textarea = $($(this).data('target')).find('textarea');
+        textarea.val(textarea.val() + ' Please read the submission instructions more carefully. Thanks!');
+    });
+});
+</script>
+
+{% endblock %}
