--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -59,7 +59,7 @@
         class="panel-collapse collapse {% if s.id == active_id %} in {% endif %}"
         role="tabpanel" aria-labelledby="heading-{{s.id}}">
         <ul class="list-group">
-          <li class="list-group-item list-group-item-info">Submission Details</li>
+          <li class="list-group-item list-group-item-info">Submission Instructions</li>
           <li class="list-group-item list-group-item-buttons">
             <div class="pull-right">
               {% if not completed %}
