--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -67,7 +67,7 @@
             )
           </li>
           <li class="list-group-item">
-            <form method="POST" enctype="multipart/form-data" action="{% url 'quests:approve' s.id %}">{% csrf_token %}
+            <form id="quick_reply{{s.id}}" method="POST" enctype="multipart/form-data" action="{% url 'quests:approve' s.id %}">{% csrf_token %}
               {{ quick_reply_form | crispy }}
               <div>
                 {% if s.is_approved %}
@@ -76,7 +76,10 @@
                   <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
                 {% endif %}
                   <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
-                  <a class="btn btn-warning" target="_blank"
+                  <a class="btn btn-warning" data-target="#quick_reply{{s.id}}"
+                    id= "btn_quick_text{{s.id}}" role="button"
+                    title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
+                  <a class="btn btn-info" target="_blank"
                     href="{% url 'badges:grant' 0 s.user.id %}" role="button">Grant Badge</a>
 
               </div>
