Suggestions and voting in progress

--- a/src/suggestions/templates/suggestions/base.html
+++ b/src/suggestions/templates/suggestions/base.html
@@ -6,6 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block content_first %}{% endblock %}
+{% block pre_heading %}{% endblock %}
 {% block heading %}<i class="fa fa-lightbulb-o pull-right"></i>{% block heading_inner %}{% endblock%}{% endblock %}
 
 {% block content %}{% endblock %}
