--- a/src/suggestions/templates/suggestions/suggestion_form.html
+++ b/src/suggestions/templates/suggestions/suggestion_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 <form method="post">{% csrf_token %}
     {{ form|crispy }}
-    <p>Your suggestion won't appear in the list untill Mr C has reviewed it.</p>
+    <p>Your suggestion won't appear in the list until Mr C has reviewed it. He may ask you a few clarification questions before approving your suggestion for voting, so make sure you keep an eye on your notifications!</p>
     <input type="submit" value="Submit" />
 
 </form>
