--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -1,12 +1,22 @@
 {% extends "suggestions/base.html" %}
 {% load crispy_forms_tags %}
-{% block heading_inner %}Suggestions{% endblock %}
-{% block content %}
+{% block pre_heading %}
+<br />
 <p>Want to help improve the Hackerspace? Look through the list of suggestions
-below and vote on those you like and dislike!  Every student can vote once per day.</p>
+below and vote on those you like and dislike!  You can vote once per day.</p>
 <p>Have your own idea that isn't already suggested below?
   <a class="btn btn-primary"
   href="{% url 'suggestions:create' %}">Make a new suggestion</a></p>
+{% endblock %}
+{% block heading_inner %}Suggestions{% endblock %}
+{% block content %}
+<div class="row panel-heading">
+  <div class="col-xs-2">Vote</div>
+  <div class="col-xs-1">Score</div>
+  <div class="col-xs-6">Suggestion</div>
+  <!-- <div class="col-xs-2">User</div> -->
+  <div class="col-xs-3">Status</div>
+</div>
 <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
 {% for object in object_list %}
   <div class="panel accordian
@@ -18,23 +28,33 @@ below and vote on those you like and dislike!  Every student can vote once per d
     {% elif object.status == 5 %}panel-danger
     {% else %}panel-default
     {% endif %}">
-    <div
-      class="panel-heading accordian accordian-trigger
+    <div class="panel-heading accordian accordian-trigger
       {% if object.id == active_id %} active {% endif %}"
       role="tab" id="heading{{object.id}}"
       aria-expanded="{% if object.id == active_id %}true{% else %}false{% endif %}"
       aria-controls="collapse{{object.id}}"
       data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
+      <div class="row">
       <h4 class="panel-title">
-        <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{object.id}}" aria-expanded="true" aria-controls="collapse{{object.id}}"> -->
-          {{ object.get_score }}
-          {% if object.sticky %}<i class="fa fa-exclamation-circle">&nbsp;</i>{% endif %}
-          {{object.title}}
-        <!-- </a> -->
-        <small class="pull-right">{{object.user}}</small><br />
-        <small class="pull-right">{{object.timestamp|timesince}} ago</small>
-
+        <div class="col-xs-2">
+          <a href="http://google.ca"><i class="fa fa-lg fa-thumbs-o-up"></i></a>
+          &nbsp;&nbsp;
+          <a href="http://google.ca"><i class="fa fa-lg fa-thumbs-o-down"></i></a>
+        </div>
+        <div class="col-xs-1">{{ object.get_score }}</div>
+        <div class="col-xs-6">{{object.title}}</div>
+        <!-- <div class="col-xs-2">{{object.user}}</div> -->
+        <div class="col-xs-3">
+          {% if object.status == 1 %}Awaiting Approval
+          {% elif object.status == 2 %}Approved for Voting
+          {% elif object.status == 3 %}Completed
+          {% elif object.status == 4 %}unlikely
+          {% elif object.status == 5 %}Denied
+          {% endif %}
+          <br /><small>{{object.status_timestamp|timesince}} ago</small>
+        </div>
       </h4>
+    </div>
     </div>
     <div id="collapse{{object.id}}"
       class="panel-collapse collapse {% if object.id == active_id %} in {% endif %}"
@@ -45,7 +65,9 @@ below and vote on those you like and dislike!  Every student can vote once per d
           <div class="pull-right">
             <a class="btn btn-danger" href="{% url 'suggestions:delete' object.id %}" role="button">Delete</a>
             <a class="btn btn-warning" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
-            <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
+            {% if object.status != 2 %}
+              <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
+            {% endif %}
           </div>
           {% endif %}
           <!-- <i class="fa fa-quote-left fa-2x pull-left"></i> -->
