--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -38,7 +38,7 @@
       // Ensure external links and media open in new tabs by adding target="_blank"
       $("a[href^='http://']").attr("target","_blank");
       $("a[href^='https://']").attr("target","_blank");
-      $("a[href*='/media/']").attr("target","_blank");
+      $("a[href^='/media/']").attr("target","_blank");
 
       // Dismiss bootstrap alerts
       if ($('.dismiss-in-3').length) {
